# noos

./: .prettierrc  README.md  package-lock.json  package.json  turbo.json
.github/workflows/: audit.yml  build.yml  publish.yml
.nx/workspace-data/: 4479d740-45bb-4429-8e3a-7a5d42843b43.db  4479d740-45bb-4429-8e3a-7a5d42843b43.db-shm  4479d740-45bb-4429-8e3a-7a5d42843b43.db-wal  file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json  source-maps.json
.nx/workspace-data/d/: server-process.json
apps/api/: Cargo.toml  bacon.toml  package.json
apps/api/lib/: error.rs  mod.rs  routes.rs  server.rs
apps/api/src/: app.rs  main.rs
apps/api/tests/: health_check.rs
apps/web/: eslint.config.js  next.config.js  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  theme.tsx
apps/web/app/app/: layout.tsx
apps/web/app/app/@collectionPanel/: page.tsx
apps/web/app/app/@dashboardPanel/: page.tsx
apps/web/models/: save.ts  task.ts
