[package]
name = "noos-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"
authors = ["Daveren Cordero <daverencordero@gmail.com>"]

[lib]
name = "serverlib"
path = "./lib/server.rs"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
